syntax = "proto3";

package v1;

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/kube-orchestra/maestro/api/v1";

message Consumer {
  string id = 1;
  string name = 2;
  repeated ConsumerLabel labels = 3;
  google.protobuf.Struct object = 4;
}

message ConsumerLabel {
  string key = 1;
  string value = 2;
}

message ConsumerList {
  repeated Consumer consumers = 1;
}


message ConsumerReadRequest {
  string id = 1;
}

message ConsumerCreateRequest {
  string name = 1;
  repeated ConsumerLabel labels = 2;
  google.protobuf.Struct object = 3;
}

service ConsumerService {
  rpc List(google.protobuf.Empty) returns(ConsumerList) {
    option (google.api.http) = {
      get: "/v1/consumers"
    };
  }

  rpc Read(ConsumerReadRequest) returns (Consumer) {
    option (google.api.http) = {
      get: "/v1/consumers/{id}"
    };
  }

  rpc Create(Consumer) returns (Consumer) {
    option (google.api.http) = {
      post: "/v1/consumers"
      body: "*"
    };
  }

}

